[gd_scene load_steps=2 format=3 uid="uid://blueyed0w1eoj"]

[ext_resource type="Script" uid="uid://dd3u7byt0d1kk" path="res://pong/scenes/main_menu/main_menu.gd" id="1_grx7j"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_grx7j")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 75

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 54
text = "Pong"

[node name="ButtonMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="SingleplayerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Singleplayer"

[node name="ButtonMargin2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="MultiplayerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonMargin2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Multiplayer"

[node name="ButtonMargin3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonMargin3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Quit"
